[package]
name = "nft-auction-house-smart-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_auction_house_smart_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
orao-solana-vrf = { version = "0.6.1", default-features = false, features = [
    "cpi",
] }
mpl-bubblegum = { version = "2.1.1" }
mpl-token-metadata = { version = "5.0.0" }
